--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_iconly: ^1.0.2
   flutter_svg: ^2.0.10+1
   get: ^4.6.6
 
@@ -52,7 +53,6 @@ flutter:
   assets:
     - assets/images/single icon White.svg
     - assets/images/auth/
-   
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
