--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ flutter:
   assets:
     - assets/images/single icon White.svg
     - assets/images/auth/
+    - assets/images/category/
+    - assets/images/product/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
