--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dynamic_height_grid: ^1.0.1
+  fancy_shimmer_image: ^2.0.3
   flutter:
     sdk: flutter
   flutter_iconly: ^1.0.2
