--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  card_swiper: ^3.0.1
   cupertino_icons: ^1.0.6
   dynamic_height_grid: ^1.0.1
   fancy_shimmer_image: ^2.0.3
