--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
     - assets/images/auth/
     - assets/images/category/
     - assets/images/product/
+    - assets/images/account_icon/
+    - assets/images/profile/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
